--- a/Material.Icons.Avalonia.Demo/App.xaml
+++ b/Material.Icons.Avalonia.Demo/App.xaml
@@ -7,8 +7,7 @@
     </Application.DataTemplates>
 
     <Application.Styles>
-        <StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml" />
-        <StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseLight.xaml" />
+        <SimpleTheme Mode="Dark"/>
         <StyleInclude Source="avares://Material.Icons.Avalonia/App.xaml" />
     </Application.Styles>
 </Application>
